--- a/src/index.html
+++ b/src/index.html
@@ -949,11 +949,11 @@
                                 <div>
                                     <h3 class="inline-flex px-4 py-1 rounded-full text-sm font-semibold tracking-wide uppercase bg-indigo-100 text-indigo-600"
                                         id="tier-standard">
-                                        Basic
+                                        STANDARD
                                     </h3>
                                 </div>
                                 <p class="mt-5 text-lg text-gray-500">
-                                    Perfect for POCs and small size businesses
+                                    Perfect for medium size businesses
                                 </p>
                             </div>
                             <div
@@ -971,7 +971,7 @@
                                             </svg>
                                         </div>
                                         <p class="ml-3 text-base text-gray-700">
-                                            Admin Control Panel
+                                            All Basic features included
                                         </p>
                                     </li>
 
@@ -986,7 +986,7 @@
                                             </svg>
                                         </div>
                                         <p class="ml-3 text-base text-gray-700">
-                                            Unlimited Integrations
+                                            Key derivers available
                                         </p>
                                     </li>
 
@@ -1001,7 +1001,7 @@
                                             </svg>
                                         </div>
                                         <p class="ml-3 text-base text-gray-700">
-                                            500 API calls / month
+                                            25,500 API calls / month
                                         </p>
                                     </li>
 
@@ -1016,7 +1016,7 @@
                                             </svg>
                                         </div>
                                         <p class="ml-3 text-base text-gray-700">
-                                            FAQ Support
+                                            Email Support
                                         </p>
                                     </li>
                                      <li class="flex items-start">
@@ -1030,7 +1030,7 @@
                                             </svg>
                                         </div>
                                         <p class="ml-3 text-base text-gray-700">
-                                            99.50% guaranteed uptime SLA
+                                            99.90% guaranteed uptime SLA
                                         </p>
                                     </li>
                                     
@@ -1040,7 +1040,7 @@
                                        class="flex items-center justify-center px-5 py-3 border border-transparent text-base font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-700"
                                        onclick="location.href='https://admin.peacemakr.io'"
                                        aria-describedby="tier-standard">
-                                        Sign Up for Free
+                                        Sign Up for $499 per Month
                                     </a>
                                 </div>
                             </div>
@@ -1051,11 +1051,11 @@
                                 <div>
                                     <h3 class="inline-flex px-4 py-1 rounded-full text-sm font-semibold tracking-wide uppercase bg-indigo-100 text-indigo-600"
                                         id="tier-standard">
-                                        Standard
+                                        Plus
                                     </h3>
                                 </div>
                                 <p class="mt-5 text-lg text-gray-500">
-                                    Perfect for medium size businesses
+                                    Perfect for large size businesses
                                 </p>
                             </div>
                             <div
@@ -1072,7 +1072,7 @@
                                             </svg>
                                         </div>
                                         <p class="ml-3 text-base text-gray-700">
-                                            All Basic Features included
+                                            All Standard Features included
                                         </p>
                                     </li>
 
@@ -1142,7 +1142,7 @@
                                        class="flex items-center justify-center px-5 py-3 border border-transparent text-base font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-700"
                                        onclick="location.href='https://admin.peacemakr.io'"
                                        aria-describedby="tier-standard">
-                                        Sign Up for $499 per Month
+                                        Sign Up for $4,499 per Month
                                     </a>
                                 </div>
                             </div>
