--- a/src/index.html
+++ b/src/index.html
@@ -1072,7 +1072,7 @@
                                             </svg>
                                         </div>
                                         <p class="ml-3 text-base text-gray-700">
-                                            All Plus features included
+                                            All Standard features included
                                         </p>
                                     </li>
 
@@ -1141,7 +1141,7 @@
                                        class="flex items-center justify-center px-5 py-3 border border-transparent text-base font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-700"
                                        onclick="location.href='https://admin.peacemakr.io'"
                                        aria-describedby="tier-standard">
-                                        Sign Up for $4,499 per Month
+                                        Sign Up for $4,999 per Month
                                     </a>
                                 </div>
                             </div>
