Simpler message, add the ticker

--- a/src/index.html
+++ b/src/index.html
@@ -22,6 +22,7 @@
     <meta name="twitter:description"
           content="The Secure Data Platform that solves all the challenges of data security with on-prem, private-cloud, and hybrid root of trusts that reduces costs and time-to-market."/>
     <script src="navbar.js" type="text/javascript"></script>
+    <script src="animatedtext.js" type="text/javascript"></script>
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-69K0GEH6J9"></script>
@@ -71,7 +72,10 @@
                         </div>
                     </div>
                     <div class="hidden md:block md:ml-10 md:pr-4 md:space-x-8">
-                        <a href="/" class="font-medium text-gray-500 hover:text-gray-900">Home</a>
+
+                        <a href="media.html" class="font-medium text-gray-500 hover:text-gray-900">Solutions</a>
+
+                        <a href="media.html" class="font-medium text-gray-500 hover:text-gray-900">Engineers</a>
 
                         <a href="media.html" class="font-medium text-gray-500 hover:text-gray-900">Media</a>
 
@@ -145,11 +149,16 @@
                 <div class="sm:text-center lg:text-left">
                     <h1 class="text-4xl tracking-tight font-extrabold text-gray-900 sm:text-5xl md:text-6xl">
                         <span class="block xl:inline">Peacemakr <br/></span>
-                        <span class="block text-indigo-600 xl:inline">Data Security <br>for the API Economy</span>
+                        <span class="block text-indigo-600 xl:inline">Data Security <br>for every application</span>
                     </h1>
-                    <p
+                    <p id="type it out"
                             class="mt-3 text-base text-gray-500 sm:mt-5 sm:text-lg sm:max-w-xl sm:mx-auto md:mt-5 md:text-xl lg:mx-0">
-                        Data security so strong, easy and accessible, that self-hosted customers return to your multi-tenant cloud
+                        Data security 
+
+                            <a href="" class="typewrite" data-period="1000" data-type='[ "that just works", "so simple that architects love it", "so strong that enterprise customers sign", "so robust that you almost forget its there", "so portable that it protect your data, everywhere", "so rigorous that security teams love it", "so compliant that lawyers stop asking questions", "so fast that performance teams do not even notice"]'>
+    <span class="wrap"></span>
+  </a>
+
                     </p>
                     <p> &nbsp;</p> 
                 <h3 class="inline-flex px-4 py-1 rounded-full text-sm font-semibold tracking-wide uppercase bg-indigo-100 text-indigo-600"
@@ -158,18 +167,19 @@
                                     </h3>
 <h3 class="inline-flex px-4 py-1 rounded-full text-sm font-semibold tracking-wide uppercase bg-indigo-100 text-indigo-600"
                                         id="tier-standard">
-                                        Automated
+                                        Easy
                                     </h3>
                     <h3 class="inline-flex px-4 py-1 rounded-full text-sm font-semibold tracking-wide uppercase bg-indigo-100 text-indigo-600"
                                         id="tier-standard">
-                                        Zero Trust
+                                        B2B Ready
                                     </h3>
                 </div>
             </main>
         </div>
     </div>
     <div class="lg:absolute lg:inset-y-0 lg:right-0 lg:w-1/2">
-        <img class="h-56 w-full object-cover sm:h-72 md:h-96 lg:w-full lg:h-full" src="/images/cover_bg.jpg" alt="">
+        <img class="h-56 w-full object-cover sm:h-72 md:h-96 lg:w-full lg:h-full
+        " src="/images/cover_bg.jpg" alt="">
     </div>
 </div>
 
