Update the ticker

--- a/src/index.html
+++ b/src/index.html
@@ -155,7 +155,7 @@
                             class="mt-3 text-base text-gray-500 sm:mt-5 sm:text-lg sm:max-w-xl sm:mx-auto md:mt-5 md:text-xl lg:mx-0">
                         Data security 
 
-                            <a href="" class="typewrite" data-period="1000" data-type='[ "that just works", "so simple that architects love it", "so strong that enterprise customers sign", "so robust that you almost forget its there", "so portable that it protect your data, everywhere", "so rigorous that security teams love it", "so compliant that lawyers stop asking questions", "so fast that performance teams do not even notice"]'>
+                            <a href="" class="typewrite" data-period="1000" data-type='[ "that just works", "so strong that enterprise customers sign", "so simple that architects love it", "so rigorous that security teams love it", "so robust that you almost forget its there", "so portable that it protect data everywhere", "so compliant that lawyers stop asking questions", "so fast that performance teams do not even notice"]'>
     <span class="wrap"></span>
   </a>
 
@@ -171,7 +171,7 @@
                                     </h3>
                     <h3 class="inline-flex px-4 py-1 rounded-full text-sm font-semibold tracking-wide uppercase bg-indigo-100 text-indigo-600"
                                         id="tier-standard">
-                                        B2B Ready
+                                        Robust
                                     </h3>
                 </div>
             </main>
