--- a/src/media.html
+++ b/src/media.html
@@ -54,7 +54,7 @@
                      aria-label="Global">
                     <div class="flex items-center flex-grow flex-shrink-0 lg:flex-grow-0">
                         <div class="flex items-center justify-between w-full md:w-auto">
-                            <a href="#">
+                            <a href="/">
                                 <span class="sr-only">Peacemakr</span>
                                 <img class="h-6 w-auto sm:h-7"
                                      src="./images/p_logo.png">
@@ -76,7 +76,10 @@
                         </div>
                     </div>
                     <div class="hidden md:block md:ml-10 md:pr-4 md:space-x-8">
-                        <a href="/" class="font-medium text-gray-500 hover:text-gray-900">Home</a>
+
+                        <a href="solutions.html" class="font-medium text-gray-500 hover:text-gray-900">Solutions</a>
+
+                        <a href="engineers.html" class="font-medium text-gray-500 hover:text-gray-900">Engineers</a>
 
                         <a href="media.html" class="font-medium text-gray-500 hover:text-gray-900">Media</a>
 
@@ -121,10 +124,19 @@
                         </div>
                     </div>
                     <div role="menu" aria-orientation="vertical" aria-labelledby="main-menu">
+                        <div role="menu" aria-orientation="vertical" aria-labelledby="main-menu">
                         <div class="px-2 pt-2 pb-3 space-y-1" role="none">
                             <a href="/"
                                class="block px-3 py-2 rounded-md text-base font-medium text-gray-700 hover:text-gray-900 hover:bg-gray-50"
                                role="menuitem">Home</a>
+
+                            <a href="solutions.html"
+                               class="block px-3 py-2 rounded-md text-base font-medium text-gray-700 hover:text-gray-900 hover:bg-gray-50"
+                               role="menuitem">Solutions</a>
+
+                               <a href="engineers.html"
+                               class="block px-3 py-2 rounded-md text-base font-medium text-gray-700 hover:text-gray-900 hover:bg-gray-50"
+                               role="menuitem">Engieers</a>
 
                             <a href="media.html"
                                class="block px-3 py-2 rounded-md text-base font-medium text-gray-700 hover:text-gray-900 hover:bg-gray-50"
