--- a/src/index.html
+++ b/src/index.html
@@ -184,21 +184,23 @@
     <!-- CTA Data Security Assessment -->
     <div class="bg-gray-50">
         <div
-                class="max-w-7xl mx-auto py-12 px-4 sm:px-6 lg:py-16 lg:px-8 lg:flex lg:items-center lg:justify-between">
+                class="max-w-7xl mx-auto py-12 px-4 sm:px-6 lg:py-16 lg:px-8 text-center">
             <h2 class="text-3xl font-extrabold tracking-tight text-gray-900 sm:text-4xl">
-                <span class="block">Peacemakr wraps data with a next-gen security layer</span>
-                <span class="block text-indigo-600">See it in action:</span>
+                <span class="block">Learn how our next-gen security layer simplifies data security with</span>
+                <span class="block text-indigo-600">E2E-Encryption-as-a-service</span>
+                <span class="block text-indigo-600">[Insert video]</span>
             </h2>
-            <div class="mt-8 flex lg:mt-0 lg:flex-shrink-0">
-                <div class="inline-flex rounded-md shadow">
-                    <a href="#"
-                       class="inline-flex items-center justify-center px-5 py-3 border border-transparent text-base font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-700"
-                        onclick="location.href='https://admin.peacemakr.io'">
-                        Try it out
-                    </a>
-                </div>
-            </div>
-        </div>
+            
+    </div>
+
+        <!-- CTA Data Security Assessment -->
+    <div class="bg-gray-50">
+        <div
+                class="max-w-7xl mx-auto py-12 px-4 sm:px-6 lg:py-16 lg:px-8 lg:flex text-center ">
+            <h2 class="text-3xl font-extrabold tracking-tight text-gray-900 sm:text-4xl">
+                <span class="block text-indigo-600">Go ahead, try it out: [walkthrough]</span>
+            </h2>
+            
     </div>
 
 
