--- a/src/index.html
+++ b/src/index.html
@@ -186,11 +186,16 @@
 
     <!-- CTA 1 -->
     <div class="bg-gray-50">
-        <div class="max-w-7xl mx-auto py-12 px-4 sm:px-6 lg:py-16 lg:px-8 text-center">
+        <div class="max-w-7xl mx-auto py-12 px-4 sm:px-6 lg:py-16 lg:px-8 text-center items-center">
             <h2 class="text-3xl font-extrabold tracking-tight text-gray-900 sm:text-4xl">
-                <span class="block">The next-gen security layer that simplifies data security with</span>
+                <span class="block">The next-gen security layer</span>
                 <span class="block text-indigo-600">E2E-Encryption-as-a-service</span>
-                <span class="block text-indigo-600">[Insert video]</span>
+                <span class="block text-indigo-600">
+                    <center>
+                    <iframe width="560" height="315" align="center" src="https://www.youtube.com/embed/_nAPPOUBIhw?rel=0" frameborder="0" allow="autoplay; clipboard-write; encrypted-media; gyroscope" allowfullscreen></iframe>
+                    </center>
+                </span>
+                
             </h2>
             
     </div>
@@ -273,7 +278,7 @@
                 class="max-w-7xl mx-auto py-12 px-4 sm:px-6 lg:py-16 lg:px-8 lg:flex lg:items-center lg:justify-between">
             <h2 class="text-3xl font-extrabold tracking-tight text-gray-900 sm:text-4xl">
                 <span class="block">Did we mention, startups are covered by</span>
-                <span class="block text-indigo-600 xl:inline">our free teir?</span>
+                <span class="block text-indigo-600 xl:inline">our free tier?</span>
             </h2>
             <div class="mt-8 flex lg:mt-0">
                 <div class="hadow">
