Fix language on pricing page, everything except  free tier is now an "upagrde"

--- a/src/pricing.html
+++ b/src/pricing.html
@@ -77,15 +77,26 @@
 
                         <a href="engineers.html" class="font-medium text-gray-500 hover:text-gray-900">Engineers</a>
 
+                        <a href="pricing.html" class="font-medium text-gray-500 hover:text-gray-900">Pricing</a>
+
                         <a href="media.html" class="font-medium text-gray-500 hover:text-gray-900">Media</a>
 
-                        <a href="about_us.html" class="font-medium text-gray-500 hover:text-gray-900">About Us</a>
-
                         <a href="https://admin.peacemakr.io/#/login"
-                           class="font-medium text-indigo-600 hover:text-indigo-500">Log in</a>
+                           class="font-medium text-indigo-600 hover:text-indigo-500">Login</a>
                     </div>
                 </nav>
             </div>
+
+            <!--
+      Mobile menu, show/hide based on menu open state.
+
+      Entering: "duration-150 ease-out"
+        From: "opacity-0 scale-95"
+        To: "opacity-100 scale-100"
+      Leaving: "duration-100 ease-in"
+        From: "opacity-100 scale-100"
+        To: "opacity-0 scale-95"
+    -->
 
             <div id="menu" class="absolute top-0 inset-x-0 p-2 transition transform origin-top-right hidden">
                 <div class="rounded-lg shadow-md bg-white ring-1 ring-black ring-opacity-5 overflow-hidden">
@@ -261,7 +272,7 @@
                                             </svg>
                                         </div>
                                         <p class="ml-3 text-base text-gray-700">
-                                            99.50% guaranteed uptime SLA
+                                            99.5% guaranteed uptime SLA
                                         </p>
                                     </li>
                                     
@@ -363,7 +374,7 @@
                                             </svg>
                                         </div>
                                         <p class="ml-3 text-base text-gray-700">
-                                            99.90% guaranteed uptime SLA
+                                            99.9% guaranteed uptime SLA
                                         </p>
                                     </li>
                                     
@@ -371,9 +382,9 @@
                                 <div class="rounded-md shadow">
                                     <a href="#"
                                        class="flex items-center justify-center px-5 py-3 border border-transparent text-base font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-700"
-                                       onclick="location.href='https://admin.peacemakr.io'"
+                                       onclick="location.href='mailto:sales@peacemakr.io'"
                                        aria-describedby="tier-standard">
-                                        Sign Up for $499 per Month
+                                        Upgrade for $499 per Month
                                     </a>
                                 </div>
                             </div>
@@ -472,9 +483,9 @@
                                 <div class="rounded-md shadow">
                                     <a href="#"
                                        class="flex items-center justify-center px-5 py-3 border border-transparent text-base font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-700"
-                                       onclick="location.href='https://admin.peacemakr.io'"
+                                       onclick="location.href='mailto:sales@peacemakr.io'"
                                        aria-describedby="tier-standard">
-                                        Sign Up for $4,999 per Month
+                                        Upgrade for $4,999 per Month
                                     </a>
                                 </div>
                             </div>
@@ -573,9 +584,9 @@
                                 <div class="rounded-md shadow">
                                     <a href="#"
                                        class="flex items-center justify-center px-5 py-3 border border-transparent text-base font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-700"
-                                       onclick="location.href='https://admin.peacemakr.io'"
-                                       aria-describedby="tier-standard">
-                                        Sign Up for $99,999 per Month
+                                       onclick="location.href='mailto:sales@peacemakr.io'"
+                                       aria-describedby="tier-Enterprise">
+                                        Contact Us
                                     </a>
                                 </div>
                             </div>
