Bit of cleanup on the youtube frame

--- a/src/index.html
+++ b/src/index.html
@@ -192,7 +192,7 @@
                 <span class="block text-indigo-600">E2E-Encryption-as-a-service</span>
                 <span class="block text-indigo-600">
                     <center>
-                    <iframe width="560" height="315" align="center" src="https://www.youtube.com/embed/_nAPPOUBIhw?rel=0" frameborder="0" allow="autoplay; clipboard-write; encrypted-media; gyroscope" allowfullscreen></iframe>
+                    <iframe width="560" height="315" align="center" src="https://www.youtube.com/embed/_nAPPOUBIhw?rel=0&modestbranding=1&controls=0" frameborder="0" allow="autoplay; clipboard-write; encrypted-media; gyroscope" allowfullscreen></iframe>
                     </center>
                 </span>
                 
