--- a/src/media.html
+++ b/src/media.html
@@ -81,12 +81,12 @@
 
                         <a href="engineers.html" class="font-medium text-gray-500 hover:text-gray-900">Engineers</a>
 
+                        <a href="pricing.html" class="font-medium text-gray-500 hover:text-gray-900">Pricing</a>
+
                         <a href="media.html" class="font-medium text-gray-500 hover:text-gray-900">Media</a>
 
-                        <a href="about_us.html" class="font-medium text-gray-500 hover:text-gray-900">About Us</a>
-
                         <a href="https://admin.peacemakr.io/#/login"
-                           class="font-medium text-indigo-600 hover:text-indigo-500">Log in</a>
+                           class="font-medium text-indigo-600 hover:text-indigo-500">Login</a>
                     </div>
                 </nav>
             </div>
@@ -124,7 +124,6 @@
                         </div>
                     </div>
                     <div role="menu" aria-orientation="vertical" aria-labelledby="main-menu">
-                        <div role="menu" aria-orientation="vertical" aria-labelledby="main-menu">
                         <div class="px-2 pt-2 pb-3 space-y-1" role="none">
                             <a href="/"
                                class="block px-3 py-2 rounded-md text-base font-medium text-gray-700 hover:text-gray-900 hover:bg-gray-50"
