--- a/src/solutions.html
+++ b/src/solutions.html
@@ -77,12 +77,12 @@
 
                         <a href="engineers.html" class="font-medium text-gray-500 hover:text-gray-900">Engineers</a>
 
+                        <a href="pricing.html" class="font-medium text-gray-500 hover:text-gray-900">Pricing</a>
+
                         <a href="media.html" class="font-medium text-gray-500 hover:text-gray-900">Media</a>
 
-                        <a href="about_us.html" class="font-medium text-gray-500 hover:text-gray-900">About Us</a>
-
                         <a href="https://admin.peacemakr.io/#/login"
-                           class="font-medium text-indigo-600 hover:text-indigo-500">Log in</a>
+                           class="font-medium text-indigo-600 hover:text-indigo-500">Login</a>
                     </div>
                 </nav>
             </div>
