--- a/src/media.html
+++ b/src/media.html
@@ -161,8 +161,14 @@
                 <div class="sm:text-center lg:text-left">
                     <h1 class="text-4xl tracking-tight font-extrabold text-gray-900 sm:text-5xl md:text-6xl">
                         <span class="block xl:inline">Peacemakr <br/></span>
-                        <span class="block text-indigo-600 xl:inline">Media</span>
+                        <span class="block text-indigo-600 xl:inline">In the Media</span>
                     </h1>
+                    
+                </div>
+                <div class="mt-3 sm:mt-4 lg:gap-5 lg:items-center">
+                        <p class="text-xl text-gray-500">
+                            Articles written and media appearance<br>by the Peacemakr team.
+                        </p>
                 </div>
             </main>
         </div>
@@ -175,13 +181,6 @@
 <!-- content of Media page -->
 <div class="bg-white pt-16 pb-20 px-4 sm:px-6 lg:pt-24 lg:pb-28 lg:px-8">
     <div class="relative max-w-lg mx-auto divide-y-2 divide-gray-200 lg:max-w-7xl">
-        <div>
-            <div class="mt-3 sm:mt-4 lg:grid lg:grid-cols-2 lg:gap-5 lg:items-center">
-                <p class="text-xl text-gray-500">
-                    Articles written and media appearance by Peacemakr staff.
-                </p>
-            </div>
-        </div>
         <div class="mt-6 pt-10 grid gap-16 lg:grid-cols-2 lg:gap-x-5 lg:gap-y-12">
             <div>
                 <p class="text-sm text-gray-500">
