--- a/src/pricing.html
+++ b/src/pricing.html
@@ -162,8 +162,7 @@
                 </div>
                 <p id="type it out"
                             class="mt-3 text-base text-gray-500 sm:mt-5 sm:text-lg sm:max-w-xl sm:mx-auto md:mt-5 md:text-xl lg:mx-0">
-                        Talk is cheap. Actions speak.
-
+                        Our free tier provides real and lasting value.
                 </p>
             </main>
         </div>
