--- a/src/index.html
+++ b/src/index.html
@@ -312,7 +312,32 @@
 
     
 
-    <!-
+<!-- CALL TO ACTION -->
+
+<div class="bg-gray-50">
+  <div class="max-w-7xl mx-auto py-16 px-4 sm:px-6 lg:px-8">
+    <div class="bg-indigo-600 rounded-lg shadow-xl overflow-hidden lg:grid lg:grid-cols-2 lg:gap-4">
+      <div class="pt-10 pb-12 px-6 sm:pt-16 sm:px-16 lg:py-16 lg:pr-0 xl:py-20 xl:px-20">
+        <div class="lg:self-center">
+          <h2 class="text-3xl font-extrabold text-white sm:text-4xl">
+            <span class="block">Ready to protect your data?</span>
+            <span class="block"></span>
+          </h2>
+          <p class="mt-4 text-lg leading-6 text-indigo-200"> Let Peacemakr protect your data, so that you can focus on value-add growth. Stop losing deals to skeptical security experts. 95% of data breaches are caused by human error.</p>
+          <br>
+          <p class="mt-4 text-lg leading-6 text-indigo-200">Peacemakr to take the guesswork off the table. </p>
+          <a href="#" class="mt-8 bg-white border border-transparent rounded-md shadow px-5 py-3 inline-flex items-center text-base font-medium text-indigo-600 hover:bg-indigo-50">Sign up for free</a>
+          <a href="https://github.com/peacemakr-io" class="mt-8 bg-white border border-transparent rounded-md shadow px-5 py-3 inline-flex items-center text-base font-medium text-indigo-600 hover:bg-indigo-50">Let's see Github</a>
+        </div>
+      </div>
+      <div class="-mt-6 aspect-w-5 aspect-h-3 md:aspect-w-2 md:aspect-h-1">
+        <img class="transform translate-x-6 translate-y-6 rounded-md object-cover object-left-top sm:translate-x-16 lg:translate-y-20" src="images/login.png" alt="App screenshot">
+      </div>
+
+    </div>
+  </div>
+</div>
+
 </main>
 
 <footer class="bg-gray-900">
