--- a/src/solutions.html
+++ b/src/solutions.html
@@ -165,7 +165,7 @@
     </div>
     <div class="lg:absolute lg:inset-y-0 lg:right-0 lg:w-1/2">
         <img class="h-56 w-full object-cover sm:h-72 md:h-96 lg:w-full lg:h-full
-        " src="/images/security.jpg" alt="">
+        " src="/images/opendoors.jpg" alt="">
     </div>
 </div>
 
@@ -197,7 +197,7 @@
   <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
     <div class="lg:text-center">
       <p class="mt-2 text-3xl leading-8 font-extrabold tracking-tight text-gray-900 sm:text-4xl">
-        Simple Solutions, to Hard Problems
+        Simple Solutions to Hard Problems
       </p>
       <p class="mt-4 max-w-2xl text-xl text-gray-500 lg:mx-auto">
         
@@ -285,6 +285,37 @@
           </div>
         </div>
       </dl>
+    </div>
+  </div>
+</div>
+
+<div class="relative bg-gray-800">
+  <div class="h-56 bg-indigo-600 sm:h-72 md:absolute md:left-0 md:h-full md:w-1/2">
+    <img class="w-full h-full object-cover" src="https://images.unsplash.com/photo-1525130413817-d45c1d127c42?ixlib=rb-1.2.1&ixqx=k3I71IguDW&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1920&q=60&blend=6366F1&sat=-100&blend-mode=multiply" alt="">
+  </div>
+  <div class="relative max-w-7xl mx-auto px-4 py-12 sm:px-6 lg:px-8 lg:py-16">
+    <div class="md:ml-auto md:w-1/2 md:pl-10">
+      <h2 class="text-base font-semibold uppercase tracking-wider text-gray-300">
+        Our team is experienced
+      </h2>
+      <p class="mt-2 text-white text-3xl font-extrabold tracking-tight sm:text-4xl">
+        And we’re here to help
+      </p>
+      <p class="mt-3 text-lg text-gray-300">
+        Even though Peacemakr is a powerful and generic solution, it may not be obvious how it applies to your specific data security challenges. We'd love an opportunity to learn more about your particular business needs and work with you on how you might best approach those data security challenges and whether or not Peaceamkr is appropriate.
+      </p>
+      <div class="mt-8">
+        <div class="inline-flex rounded-md shadow">
+          <a href="mailto:info@peacemakr.io" class="inline-flex items-center justify-center px-5 py-3 border border-transparent text-base font-medium rounded-md text-gray-900 bg-white hover:bg-indigo-100">
+            Contact our Data Security Experts
+            <!-- Heroicon name: solid/external-link -->
+            <svg class="-mr-1 ml-3 h-5 w-5 text-gray-400" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor" aria-hidden="true">
+              <path d="M11 3a1 1 0 100 2h2.586l-6.293 6.293a1 1 0 101.414 1.414L15 6.414V9a1 1 0 102 0V4a1 1 0 00-1-1h-5z" />
+              <path d="M5 5a2 2 0 00-2 2v8a2 2 0 002 2h8a2 2 0 002-2v-3a1 1 0 10-2 0v3H5V7h3a1 1 0 000-2H5z" />
+            </svg>
+          </a>
+        </div>
+      </div>
     </div>
   </div>
 </div>
