--- a/src/engineers.html
+++ b/src/engineers.html
@@ -186,6 +186,30 @@
 
 
 <main>
+
+    <!-- CALL TO ACTION -->
+    <div class="bg-gray-50">
+      <div class="max-w-7xl mx-auto py-16 px-4 sm:px-6 lg:px-8">
+        <div class="bg-indigo-600 rounded-lg shadow-xl overflow-hidden lg:grid lg:grid-cols-2 lg:gap-4">
+          <div class="pt-10 pb-12 px-6 sm:pt-16 sm:px-16 lg:py-16 lg:pr-0 xl:py-20 xl:px-20">
+            <div class="lg:self-center">
+              <h2 class="text-3xl font-extrabold text-white sm:text-4xl">
+                <span class="block">Did you install the Peacemakr Command Line Interface yet?</span>
+                <span class="block"></span>
+              </h2>
+              <p class="mt-4 text-lg leading-6 text-indigo-200">It's a good frist step.</p>
+              <br>
+              <a href="https://github.com/peacemakr-io/peacemakr-cli" class="mt-8 bg-white border border-transparent rounded-md shadow px-5 py-3 inline-flex items-center text-base font-medium text-indigo-600 hover:bg-indigo-50">Install Now</a>
+            </div>
+          </div>
+          <div class="-mt-6 aspect-w-5 aspect-h-3 md:aspect-w-2 md:aspect-h-1">
+            <img class="transform translate-x-6 translate-y-6 rounded-md object-cover object-left-top sm:translate-x-16 lg:translate-y-20" src="images/cli.png" alt="App screenshot">
+          </div>
+
+        </div>
+      </div>
+    </div>
+
     <div class="bg-white">
         <div class="max-w-7xl mx-auto py-16 px-4 sm:px-6 lg:py-24 lg:px-8 lg:grid lg:grid-cols-3 lg:gap-x-8">
             <div>
@@ -797,18 +821,9 @@
             <p class="mt-2 text-3xl font-extrabold text-gray-900 tracking-tight sm:text-4xl">
                 That's nice. But what is Peaceamkr, exactly?
             </p>
-            <p class="mt-5 max-w-prose mx-auto text-xl text-left text-gray-500">
-               Peacemakr securely delivers encryption keys to clients and helps them use the keys consistently and correctly to encrypt and decrypt application data.
-               <br> <br>
-                Every symmetric key in Peacemakr comes from a Key Deriver. You may run a Key Deriver wherever you'd like, but everyone starts with one in the cloud.
-                <br> <br>
-                Key Derivers deriver keys and deliver them to authorized clients. Inside clients, policies guide how clients use the keys and for how long.
-                <br> <br>
-                In your Securit Control Panel, security policies change how Key Derivers and clients operate, even after you have released them into the wild.
-                <br> <br>
-                We take care of all the DevOps, security, firewalls, industry certifications, backward compatibility, signatures, non-repudiation, and even key selection problems for you and unify the entire experience behind a straightforward interface.
-                <br><br>
-                All of our SDK's are Open Source and available on Github.
+            <p class="mt-5 max-w-prose text-center mx-auto text-xl text-left text-gray-500">
+               Peacemakr encyrpts and decrypts data consistently and correctly.
+               <br>
             </p>
         </div>
     </div>
@@ -823,37 +838,14 @@
             </h2>
             <div class="mt-8 flex lg:mt-0 lg:flex-shrink-0">
                 <div class="inline-flex rounded-md shadow">
-                    <a href="#"
+                    <a href="mailto:info@peacemakr.io"
                        class="inline-flex items-center justify-center px-5 py-3 border border-transparent text-base font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-700"
-                        onclick="location.href='https://github.com/peacemakr-io/peacemakr-cli'">
+                        onclick="location.href='mailto:info@peacemakr.io">
                         Request Whitepaper
                     </a>
                 </div>
             </div>
         </div>
-    </div>
-    
-    <!-- CALL TO ACTION -->
-    <div class="bg-gray-50">
-      <div class="max-w-7xl mx-auto py-16 px-4 sm:px-6 lg:px-8">
-        <div class="bg-indigo-600 rounded-lg shadow-xl overflow-hidden lg:grid lg:grid-cols-2 lg:gap-4">
-          <div class="pt-10 pb-12 px-6 sm:pt-16 sm:px-16 lg:py-16 lg:pr-0 xl:py-20 xl:px-20">
-            <div class="lg:self-center">
-              <h2 class="text-3xl font-extrabold text-white sm:text-4xl">
-                <span class="block">Did you install the Peacemakr Command Line Interface yet?</span>
-                <span class="block"></span>
-              </h2>
-              <p class="mt-4 text-lg leading-6 text-indigo-200">It's a good frist step.</p>
-              <br>
-              <a href="https://github.com/peacemakr-io/peacemakr-cli" class="mt-8 bg-white border border-transparent rounded-md shadow px-5 py-3 inline-flex items-center text-base font-medium text-indigo-600 hover:bg-indigo-50">Install Now</a>
-            </div>
-          </div>
-          <div class="-mt-6 aspect-w-5 aspect-h-3 md:aspect-w-2 md:aspect-h-1">
-            <img class="transform translate-x-6 translate-y-6 rounded-md object-cover object-left-top sm:translate-x-16 lg:translate-y-20" src="images/cli.png" alt="App screenshot">
-          </div>
-
-        </div>
-      </div>
     </div>
 
 
