--- a/src/index.html
+++ b/src/index.html
@@ -177,7 +177,7 @@
                             class="mt-3 text-base text-gray-500 sm:mt-5 sm:text-lg sm:max-w-xl sm:mx-auto md:mt-5 md:text-xl lg:mx-0">
                         Data security 
 
-                            <a href="" class="typewrite" data-period="1250" data-type='[ "that just works 🚀", "that your customers deserve 🙏", "so strong that enterprise customers sign ✍️", "so simple that architects ❤️", "so rigorous that security teams 😍", "so robust that you forget its there 😏", "so portable that it protect data everywhere 🛰", "so compliant that lawyers stop asking questions 🤐", "so fast that performance teams ✅", "that makes it easy to do the right thing ✌️"]'>
+                            <a href="" class="typewrite" data-period="2000" data-type='[ "that just works 🚀", "that your customers deserve 🙏", "so strong that enterprise customers sign ✍️", "so simple that architects ❤️", "so rigorous that security teams 😍", "so robust that you forget its there 😏", "so portable that it protect data everywhere 🛰", "so compliant that lawyers stop asking questions 🤐", "so fast that performance teams ✅", "that makes it easy to do the right thing ✌️"]'>
     <span class="wrap"></span>
   </a>
 
@@ -261,7 +261,7 @@
 
             <div class="self-center col-span-2">
                 <h2 class="font-extrabold text-center text-gray-900 sm:text-3xl col-span-2">
-                    <span class="block">Wait till you see your <span class="text-indigo-600"> <br>security control panel.</span>
+                    <span class="block">Wait till you see your <span class="text-indigo-600"> <br>Security Control Panel.</span>
                 </h2>
             </div>
 
@@ -304,6 +304,8 @@
     </div>
 
 
+
+
     <!-- Customer block -->
     <div class="relative bg-gray-50 py-16 sm:py-24 lg:py-32 overflow-hidden">
         <div class="mx-auto max-w-md px-4 text-center sm:max-w-3xl sm:px-6 lg:px-8 lg:max-w-7xl">
@@ -333,11 +335,10 @@
             <span class="block">Ready to protect your data?</span>
             <span class="block"></span>
           </h2>
-          <p class="mt-4 text-lg leading-6 text-indigo-200"> Let Peacemakr protect your data, so that you can focus on value-add growth. Stop losing deals to skeptical security experts. 95% of data breaches are caused by human error.</p>
+          <p class="mt-4 text-lg leading-6 text-indigo-200"> Let Peacemakr protect your data, so that you can focus on value-add growth. Stop losing deals to skeptical security experts. 95% of data breaches are made possible by human error.</p>
           <br>
-          <p class="mt-4 text-lg leading-6 text-indigo-200">Peacemakr to take the guesswork off the table. </p>
+          <p class="mt-4 text-lg leading-6 text-indigo-200">Peacemakr eliminates the guesswork. </p>
           <a href="#" class="mt-8 bg-white border border-transparent rounded-md shadow px-5 py-3 inline-flex items-center text-base font-medium text-indigo-600 hover:bg-indigo-50">Sign up for free</a>
-          <a href="https://github.com/peacemakr-io" class="mt-8 bg-white border border-transparent rounded-md shadow px-5 py-3 inline-flex items-center text-base font-medium text-indigo-600 hover:bg-indigo-50">Let's see Github</a>
         </div>
       </div>
       <div class="-mt-6 aspect-w-5 aspect-h-3 md:aspect-w-2 md:aspect-h-1">
