--- a/src/solutions.html
+++ b/src/solutions.html
@@ -232,7 +232,7 @@
               GDPR, CCPA, SHEILD, and Personally Identifiable Information
             </dt>
             <dd class="mt-2 text-base text-gray-500">
-              Privacy legislation calls for businesses to use industry-standard best practices to protect personally identifiable information. Peacemakr's E2E-Encryption aligns perfectly with the intentions behind these vague data security laws. By raising the bar and lowering the barrier to entry, we set the data protection standard for modern applications.
+              Privacy legislation calls for businesses to use industry-standard best practices to protect personally identifiable information. Peacemakr's E2E-Encryption aligns perfectly with the intentions behind these data security laws. By raising the security bar and lowering the barrier to entry, we set the data protection standard for modern applications.
             </dd>
           </div>
         </div>
@@ -272,7 +272,7 @@
               Insurance and NAIC Data Security Requirements
             </dt>
             <dd class="mt-2 text-base text-gray-500">
-              Insurers, Insurance Produces, Regulated Entities, and State Insurance Regulators all require service providers have controls in place to protect data. Peacemakr's E2E-Encryption guarantees compliance and facilitates business collaborations that would otherwise be out of reach.
+              Insurers, Insurance Producers, Regulated Entities, and State Insurance Regulators all require service providers have controls in place to protect data. Peacemakr's E2E-Encryption guarantees compliance and facilitates business collaborations that would otherwise be out of reach.
             </dd>
           </div>
         </div>
@@ -313,7 +313,7 @@
         And we’re here to help
       </p>
       <p class="mt-3 text-lg text-gray-300">
-        Even though Peacemakr is a powerful and generic solution, it may not be obvious how it applies to your specific data security challenges. We'd love an opportunity to learn more about your particular business needs and work with you on how you might best approach those data security challenges and whether or not Peaceamkr is appropriate.
+        Even though Peacemakr is a powerful and generic solution, it may not be obvious how it applies to your specific data security challenges. We'd love an opportunity to learn more about your particular business needs and work with you on how you might best approach those data security challenges.
       </p>
       <div class="mt-8">
         <div class="inline-flex rounded-md shadow">
