--- a/src/index.html
+++ b/src/index.html
@@ -233,8 +233,31 @@
 
                 </span>
                 </div>
+
+                <script language="javascript">
+                    function copyToClipboard() {
+                    var dummy = document.createElement("textarea");
+                    // to avoid breaking orgain page when copying more words
+                    // cant copy when adding below this code
+                    // dummy.style.display = 'none'
+                    document.body.appendChild(dummy);
+                    //Be careful if you use texarea. setAttribute('value', value), which works with "input" does not work with "textarea". – Eduard
+                    dummy.value = `brew tap peacemakr-io/peacemakr
+brew install peacemakr-cli
+export PEACEMAKR_APIKEY=d1Maw58P2xCQ8d0GV15n22SQNI6lYXHzWLCTEvNPHnY=
+echo "Hello Secure World" | peacemakr -encrypt`;
+                        dummy.select();
+                        document.execCommand("copy");
+                        document.body.removeChild(dummy);
+                    }
+                </script>
                 <div class="text-right col-span-3">
-                [copy button goes here]
+                    <a href="#" onclick="copyToClipboard(); return false;">
+                        Copy
+                        <svg class="w-6 h-6 float-right" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M8 5H6a2 2 0 00-2 2v12a2 2 0 002 2h10a2 2 0 002-2v-1M8 5a2 2 0 002 2h2a2 2 0 002-2M8 5a2 2 0 012-2h2a2 2 0 012 2m0 0h2a2 2 0 012 2v3m2 4H10m0 0l3-3m-3 3l3 3" />
+                        </svg>
+                    </a>
                 </div>
             
     </div>
@@ -304,24 +327,57 @@
     </div>
 
 
+    <section class="bg-white overflow-hidden">
+  <div class="relative max-w-7xl mx-auto pt-20 pb-12 px-4 sm:px-6 lg:px-8 lg:py-20">
+    <svg class="absolute top-full left-0 transform translate-x-80 -translate-y-24 lg:hidden" width="784" height="404" fill="none" viewBox="0 0 784 404" aria-hidden="true">
+      <defs>
+        <pattern id="e56e3f81-d9c1-4b83-a3ba-0d0ac8c32f32" x="0" y="0" width="20" height="20" patternUnits="userSpaceOnUse">
+          <rect x="0" y="0" width="4" height="4" class="text-gray-200" fill="currentColor" />
+        </pattern>
+      </defs>
+      <rect width="784" height="404" fill="url(#e56e3f81-d9c1-4b83-a3ba-0d0ac8c32f32)" />
+    </svg>
 
+    <svg class="hidden lg:block absolute right-full top-1/2 transform translate-x-1/2 -translate-y-1/2" width="404" height="784" fill="none" viewBox="0 0 404 784" aria-hidden="true">
+      <defs>
+        <pattern id="56409614-3d62-4985-9a10-7ca758a8f4f0" x="0" y="0" width="20" height="20" patternUnits="userSpaceOnUse">
+          <rect x="0" y="0" width="4" height="4" class="text-gray-200" fill="currentColor" />
+        </pattern>
+      </defs>
+      <rect width="404" height="784" fill="url(#56409614-3d62-4985-9a10-7ca758a8f4f0)" />
+    </svg>
 
-    <!-- Customer block -->
-    <div class="relative bg-gray-50 py-16 sm:py-24 lg:py-32 overflow-hidden">
-        <div class="mx-auto max-w-md px-4 text-center sm:max-w-3xl sm:px-6 lg:px-8 lg:max-w-7xl">
-            <p class="mt-2 text-3xl font-extrabold text-gray-900 tracking-tight sm:text-4xl">
-                Voice of Our Customers
+    <div class="relative lg:flex lg:items-center">
+      <div class="hidden lg:block lg:flex-shrink-0">
+        <img class="h-64 w-64 rounded-full xl:h-80 xl:w-80" src="./images/enlai.jpg" alt="">
+      </div>
+
+      <div class="relative lg:ml-10">
+        <svg class="absolute top-0 left-0 transform -translate-x-8 -translate-y-24 h-36 w-36 text-indigo-200 opacity-50" stroke="currentColor" fill="none" viewBox="0 0 144 144" aria-hidden="true">
+          <path stroke-width="2" d="M41.485 15C17.753 31.753 1 59.208 1 89.455c0 24.664 14.891 39.09 32.109 39.09 16.287 0 28.386-13.03 28.386-28.387 0-15.356-10.703-26.524-24.663-26.524-2.792 0-6.515.465-7.446.93 2.327-15.821 17.218-34.435 32.11-43.742L41.485 15zm80.04 0c-23.268 16.753-40.02 44.208-40.02 74.455 0 24.664 14.891 39.09 32.109 39.09 15.822 0 28.386-13.03 28.386-28.387 0-15.356-11.168-26.524-25.129-26.524-2.792 0-6.049.465-6.98.93 2.327-15.821 16.753-34.435 31.644-43.742L121.525 15z" />
+        </svg>
+        <blockquote class="relative">
+          <div class="text-2xl leading-9 font-medium text-gray-900">
+            <p>
+              We selected Peacemakr because of their full-stack solution that helped us to go to market at startup-speed for our entire portfolio of mobile, server-side and web properties. We were able to focus on our core competencies while letting Peacemakr's robust yet simple integration handle our complex data-security requirements, and at a fraction of the cost of architecting, building, and scaling out a full security framework from scratch.
             </p>
-            <p> &nbsp;</p> 
-            <p class="text-left "><span class="mt-5 max-w-prose mx-auto font-extrabold text-xl text-gray-900">"</span><span class="mt-5 max-w-prose mx-auto text-xl text-gray-500">
-                <i> We selected Peacemakr because of their full-stack solution that helped us to go to market at startup-speed for our entire portfolio of mobile, server-side and web properties. We were able to focus on our core competencies while letting Peacemakr's robust yet simple integration handle our complex data-security requirements, and at a fraction of the cost of architecting, building, and scaling out a full security framework from scratch. </i>
-                </span><span class="mt-5 max-w-prose mx-auto font-extrabold text-xl text-gray-900">"</span>
-                </p>
-            <p class="mt-5 max-w-prose mx-auto font-extrabold text-xl text-gray-500 text-right">
-                -Enlai Chu, CEO of Productive
-            </p>
-        </div>
+          </div>
+          <footer class="mt-8">
+            <div class="flex">
+              <div class="flex-shrink-0 lg:hidden">
+                <img class="h-12 w-12 rounded-full" src="https://images.unsplash.com/photo-1494790108377-be9c29b29330?ixlib=rb-1.2.1&ixqx=k3I71IguDW&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=facearea&facepad=2&w=256&h=256&q=80" alt="">
+              </div>
+              <div class="ml-4 lg:ml-0">
+                <div class="text-base font-medium text-gray-900">Enlai Chu</div>
+                <div class="text-base font-medium text-indigo-600">CEO of Productive</div>
+              </div>
+            </div>
+          </footer>
+        </blockquote>
+      </div>
     </div>
+  </div>
+</section>
 
     
 
@@ -338,7 +394,7 @@
           <p class="mt-4 text-lg leading-6 text-indigo-200"> Let Peacemakr protect your data, so that you can focus on value-add growth. Stop losing deals to skeptical security experts. 95% of data breaches are made possible by human error.</p>
           <br>
           <p class="mt-4 text-lg leading-6 text-indigo-200">Peacemakr eliminates the guesswork. </p>
-          <a href="#" class="mt-8 bg-white border border-transparent rounded-md shadow px-5 py-3 inline-flex items-center text-base font-medium text-indigo-600 hover:bg-indigo-50">Sign up for free</a>
+          <a href="https://admin.peacemakr.io/" class="mt-8 bg-white border border-transparent rounded-md shadow px-5 py-3 inline-flex items-center text-base font-medium text-indigo-600 hover:bg-indigo-50">Sign up for free</a>
         </div>
       </div>
       <div class="-mt-6 aspect-w-5 aspect-h-3 md:aspect-w-2 md:aspect-h-1">
