--- a/src/index.html
+++ b/src/index.html
@@ -145,7 +145,7 @@
 
                                <a href="engineers.html"
                                class="block px-3 py-2 rounded-md text-base font-medium text-gray-700 hover:text-gray-900 hover:bg-gray-50"
-                               role="menuitem">Engieers</a>
+                               role="menuitem">Engineers</a>
 
                             <a href="media.html"
                                class="block px-3 py-2 rounded-md text-base font-medium text-gray-700 hover:text-gray-900 hover:bg-gray-50"
