Drop about use, add pricing (to mobile)

--- a/src/media.html
+++ b/src/media.html
@@ -148,13 +148,14 @@
                                class="block px-3 py-2 rounded-md text-base font-medium text-gray-700 hover:text-gray-900 hover:bg-gray-50"
                                role="menuitem">Engineers</a>
 
+                            <a href="pricing.html"
+                               class="block px-3 py-2 rounded-md text-base font-medium text-gray-700 hover:text-gray-900 hover:bg-gray-50"
+                               role="menuitem">Pricing</a>
+
                             <a href="media.html"
                                class="block px-3 py-2 rounded-md text-base font-medium text-gray-700 hover:text-gray-900 hover:bg-gray-50"
                                role="menuitem">Media</a>
 
-                            <a href="about_us.html"
-                               class="block px-3 py-2 rounded-md text-base font-medium text-gray-700 hover:text-gray-900 hover:bg-gray-50"
-                               role="menuitem">About Us</a>
                         </div>
                         <div role="none">
                             <a href="https://admin.peacemakr.io/#/login"
