--- a/src/solutions.html
+++ b/src/solutions.html
@@ -230,7 +230,7 @@
           </div>
           <div class="ml-4">
             <dt class="text-lg leading-6 font-medium text-gray-900">
-              GDPR, CCPA, SHEILD, and Personally Identifiable Information
+              GDPR, CCPA, SHIELD, and Personally Identifiable Information
             </dt>
             <dd class="mt-2 text-base text-gray-500">
               Privacy legislation calls for businesses to use industry-standard best practices to protect personally identifiable information. Peacemakr's E2E-Encryption aligns perfectly with the intentions behind these data security laws. By raising the security bar and lowering the barrier to entry, we set the data protection standard for modern applications.
