--- a/src/engineers.html
+++ b/src/engineers.html
@@ -198,7 +198,7 @@
                 <span class="block">Did you install the Peacemakr Command Line Interface yet?</span>
                 <span class="block"></span>
               </h2>
-              <p class="mt-4 text-lg leading-6 text-indigo-200">It's a good frist step.</p>
+              <p class="mt-4 text-lg leading-6 text-indigo-200">It's a good first step.</p>
               <br>
               <a href="https://github.com/peacemakr-io/peacemakr-cli" class="mt-8 bg-white border border-transparent rounded-md shadow px-5 py-3 inline-flex items-center text-base font-medium text-indigo-600 hover:bg-indigo-50">Install Now</a>
             </div>
