--- a/src/engineers.html
+++ b/src/engineers.html
@@ -823,7 +823,7 @@
                 That's nice. But what is Peaceamkr, exactly?
             </p>
             <p class="mt-5 max-w-prose text-center mx-auto text-xl text-left text-gray-500">
-               Peacemakr encyrpts and decrypts data consistently and correctly.
+               Peacemakr encrypts and decrypts data consistently and correctly.
                <br>
             </p>
         </div>
