--- a/src/index.html
+++ b/src/index.html
@@ -366,7 +366,7 @@ echo "Hello Secure World" | peacemakr -encrypt`;
           <footer class="mt-8">
             <div class="flex">
               <div class="flex-shrink-0 lg:hidden">
-                <img class="h-12 w-12 rounded-full" src="https://images.unsplash.com/photo-1494790108377-be9c29b29330?ixlib=rb-1.2.1&ixqx=k3I71IguDW&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=facearea&facepad=2&w=256&h=256&q=80" alt="">
+                <img class="h-12 w-12 rounded-full" src="./images/enlai.jpg" alt="">
               </div>
               <div class="ml-4 lg:ml-0">
                 <div class="text-base font-medium text-gray-900">Enlai Chu</div>
