Remove the tease

--- a/src/engineers.html
+++ b/src/engineers.html
@@ -815,7 +815,7 @@
     </div>
     
     
-    <div class="bg-white">
+<!--     <div class="bg-white">
         <div class="relative bg-gray-50 py-16 sm:py-24 lg:py-32 overflow-hidden">
         <div class="mx-auto max-w-md px-4 text-center sm:max-w-3xl sm:px-6 lg:px-8 lg:max-w-7xl">
             <h2 class="text-base font-semibold tracking-wider text-indigo-600 uppercase"></h2>
@@ -823,11 +823,11 @@
                 That's nice. But what is Peaceamkr, exactly?
             </p>
             <p class="mt-5 max-w-prose text-center mx-auto text-xl text-left text-gray-500">
-               Peacemakr encrypts and decrypts data consistently and correctly.
+               Peacemakr encrypt and decrypt data consistently and correctly.
                <br>
             </p>
         </div>
-    </div>
+    </div> -->
 
     <!-- CTA Data Security Assessment -->
     <div class="bg-gray-50">
