Simpler and more striking CTA

--- a/src/engineers.html
+++ b/src/engineers.html
@@ -830,24 +830,19 @@
     </div> -->
 
     <!-- CTA Data Security Assessment -->
-    <div class="bg-gray-50">
-        <div
-                class="max-w-7xl mx-auto py-12 px-4 sm:px-6 lg:py-16 lg:px-8 lg:flex lg:items-center lg:justify-between">
-            <h2 class="text-3xl font-extrabold tracking-tight text-gray-900 sm:text-4xl">
-                <span class="block">Want to learn more? Read our E2E-Encryption Whitepaper.</span>
-                <span class="block text-indigo-600">We'd love to share.</span>
-            </h2>
-            <div class="mt-8 flex lg:mt-0 lg:flex-shrink-0">
-                <div class="inline-flex rounded-md shadow">
-                    <a href="mailto:info@peacemakr.io"
-                       class="inline-flex items-center justify-center px-5 py-3 border border-transparent text-base font-medium rounded-md text-white bg-indigo-600 hover:bg-indigo-700"
-                        onclick="location.href='mailto:info@peacemakr.io">
-                        Request Whitepaper
-                    </a>
-                </div>
-            </div>
-        </div>
-    </div>
+  <div class="bg-indigo-600">
+  <div class="max-w-2xl mx-auto text-center py-16 px-4 sm:py-20 sm:px-6 lg:px-8">
+    <h2 class="text-3xl font-extrabold text-white sm:text-4xl">
+      <span class="block">Want to learn more?</span>
+    </h2>
+    <p class="mt-4 text-lg leading-6 text-indigo-200">We'd love to share.</p>
+    <a href="mailto:info@peacemakr.io"
+       class="mt-8 w-full inline-flex items-center justify-center px-5 py-3 border border-transparent text-base font-medium rounded-md text-indigo-600 bg-white hover:bg-indigo-50 sm:w-auto"
+        onclick="location.href='mailto:info@peacemakr.io">
+        Request E2E-Encryption Whitepaper
+    </a>
+  </div>
+</div>
 
 
 </main>
