--- a/src/index.html
+++ b/src/index.html
@@ -172,7 +172,7 @@
                 <div class="sm:text-center lg:text-left">
                     <h1 class="text-4xl tracking-tight font-extrabold text-gray-900 sm:text-5xl md:text-6xl">
                         <span class="block xl:inline">Peacemakr <br/></span>
-                        <span class="block text-indigo-600 xl:inline">Data Security <br>for every application</span>
+                        <span class="block text-indigo-600 xl:inline">E2E-Encryption<br>for every application</span>
                     </h1>
                     <p id="type it out"
                             class="mt-3 text-base text-gray-500 sm:mt-5 sm:text-lg sm:max-w-xl sm:mx-auto md:mt-5 md:text-xl lg:mx-0">
