Suggestions from Fred

--- a/src/solutions.html
+++ b/src/solutions.html
@@ -168,8 +168,8 @@
             <main class="mt-10 mx-auto max-w-7xl px-4 sm:mt-12 sm:px-6 md:mt-16 lg:mt-20 lg:px-8 xl:mt-28">
                 <div class="sm:text-center lg:text-left">
                     <h1 class="text-4xl tracking-tight font-extrabold text-gray-900 sm:text-5xl md:text-6xl">
-                        <span class="block xl:inline">Solutions<br/></span>
-                        <span class="block text-indigo-600 xl:inline">that open doors</span>
+                        <span class="block xl:inline">Data Security<br/></span>
+                        <span class="block text-indigo-600 xl:inline">for Regulated Industries</span>
                     </h1>
                 </div>
             </main>
@@ -190,7 +190,7 @@
                 class="max-w-7xl mx-auto py-12 px-4 sm:px-6 lg:py-16 lg:px-8 lg:flex lg:items-center lg:justify-between">
             <h2 class="text-3xl font-extrabold tracking-tight text-gray-900 sm:text-4xl">
                 <span class="block">Checkout our Data Security Landscape E-Book</span>
-                <span class="block text-indigo-600">and see why Sales Teams love Peacemakr</span>
+                <span class="block text-indigo-600">and learn how to meet your industry's requirements</span>
             </h2>
             <div class="mt-8 flex lg:mt-0 lg:flex-shrink-0">
                 <div class="inline-flex rounded-md shadow">
