--- a/src/engineers.html
+++ b/src/engineers.html
@@ -169,7 +169,7 @@
                 <div class="sm:text-center lg:text-left">
                     <h1 class="text-4xl tracking-tight font-extrabold text-gray-900 sm:text-5xl md:text-6xl">
                         <span class="block xl:inline">Engineers<br/></span>
-                        <span class="block text-indigo-600 xl:inline">that secure our future</span>
+                        <span class="block text-indigo-600 xl:inline">that secure your data</span>
                     </h1>
                     <p id="type it out"
                             class="mt-3 text-base text-gray-500 sm:mt-5 sm:text-lg sm:max-w-xl sm:mx-auto md:mt-5 md:text-xl lg:mx-0">
@@ -198,7 +198,7 @@
                 <span class="block">Did you install the Peacemakr Command Line Interface yet?</span>
                 <span class="block"></span>
               </h2>
-              <p class="mt-4 text-lg leading-6 text-indigo-200">It's a good first step.</p>
+              <p class="mt-4 text-lg leading-6 text-indigo-200">E2E-Encryption at your fingertips.</p>
               <br>
               <a href="https://github.com/peacemakr-io/peacemakr-cli" class="mt-8 bg-white border border-transparent rounded-md shadow px-5 py-3 inline-flex items-center text-base font-medium text-indigo-600 hover:bg-indigo-50">Install Now</a>
             </div>
@@ -210,6 +210,60 @@
         </div>
       </div>
     </div>
+
+    <!-- CTA 2 -->
+    <div class="bg-white">
+        <div class="mx-auto py-12 px-4 max-w-7xl sm:px-6 lg:px-8 lg:py-24 ">
+            <div class="space-y-12 lg:grid lg:grid-cols-3 lg:gap-8 lg:space-y-0">
+                <div class="self-center">
+                    <h2 class="font-extrabold text-center text-gray-900 sm:text-4xl">
+                        <span class="block text-indigo-600">Go ahead, try it out:</span>
+                    </h2>
+                </div>
+                <div class="p-4 rounded-lg bg-gray-700 lg:col-span-2">
+                      <span class="rounded-sm font-mono text-indigo-100">
+                        # Install peacemakr
+                        <br>
+                        brew install peacemakr-cli
+                        <br>
+                        <br>
+                        # Authenticate
+                        <br>
+                        export PEACEMAKR_APIKEY=d1Maw58P2xCQ8d0GV15n22SQNI6lYXHzWLCTEvNPHnY=
+                        <br>
+                        <br>
+                        # Encrypt
+                        <br>
+                        echo "Hello Secure World" | peacemakr -encrypt
+                    </span>
+                    </div>
+
+                    <script language="javascript">
+                        function copyToClipboard() {
+                        var dummy = document.createElement("textarea");
+                        // to avoid breaking orgain page when copying more words
+                        // cant copy when adding below this code
+                        // dummy.style.display = 'none'
+                        document.body.appendChild(dummy);
+                        //Be careful if you use texarea. setAttribute('value', value), which works with "input" does not work with "textarea". – Eduard
+                        dummy.value = `brew install peacemakr-cli
+    export PEACEMAKR_APIKEY=d1Maw58P2xCQ8d0GV15n22SQNI6lYXHzWLCTEvNPHnY=
+    echo "Hello Secure World" | peacemakr -encrypt`;
+                            dummy.select();
+                            document.execCommand("copy");
+                            document.body.removeChild(dummy);
+                        }
+                    </script>
+                    <div class="text-right col-span-3 text-gray-800">
+                        <a href="#" onclick="copyToClipboard(); return false;">
+                            Copy
+                            <svg class="w-6 h-6 float-right" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+                              <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M8 5H6a2 2 0 00-2 2v12a2 2 0 002 2h10a2 2 0 002-2v-1M8 5a2 2 0 002 2h2a2 2 0 002-2M8 5a2 2 0 012-2h2a2 2 0 012 2m0 0h2a2 2 0 012 2v3m2 4H10m0 0l3-3m-3 3l3 3" />
+                            </svg>
+                        </a>
+                    </div>
+                </div>
+            </div>
 
     <div class="bg-white">
         <div class="max-w-7xl mx-auto py-16 px-4 sm:px-6 lg:py-24 lg:px-8 lg:grid lg:grid-cols-3 lg:gap-x-8">
@@ -338,6 +392,7 @@
             </div>
         </div>
     </div>
+
 
         <div class="bg-gray-50 max-w-7xl mx-auto py-16 px-4 sm:px-6 lg:py-24 lg:px-8 lg:grid lg:grid-cols-3 lg:gap-x-8">
             <div class="mt-0">
@@ -785,19 +840,6 @@
 
                 </dl>
             </div>
-        </div>
-    </div>
-
-    <!-- Secure Collaborations block -->
-    <div class="relative bg-white py-16 sm:py-24 lg:py-32 overflow-hidden">
-        <div class="mx-auto max-w-md px-4 text-center sm:max-w-3xl sm:px-6 lg:px-8 lg:max-w-7xl">
-            <h2 class="text-base font-semibold tracking-wider text-indigo-600 uppercase">Connected</h2>
-            <p class="mt-2 text-3xl font-extrabold text-gray-900 tracking-tight sm:text-4xl">
-                Secure Collaborations
-            </p>
-            <p class="mt-5 max-w-prose mx-auto text-xl text-gray-500">
-                Securely share protected data outside your infrastructure.
-            </p>
         </div>
     </div>
 
