--- a/src/pricing.html
+++ b/src/pricing.html
@@ -174,7 +174,7 @@
                 </div>
                 <p id="type it out"
                             class="mt-3 text-base text-gray-500 sm:mt-5 sm:text-lg sm:max-w-xl sm:mx-auto md:mt-5 md:text-xl lg:mx-0">
-                        Our free tier provides real and lasting value.
+                        A plan for every need.
                 </p>
             </main>
         </div>
