Fix site descriptions

--- a/src/engineers.html
+++ b/src/engineers.html
@@ -10,16 +10,16 @@
     <link rel="shortcut icon" href="./images/peacemakr.ico" type="image/x-icon"/>
     <meta property="og:title" content="Peacemakr"/>
     <meta property="og:description"
-          content="The Secure Data Platform that solves all the challenges of data security with on-prem, private-cloud, and hybrid root of trusts that reduces costs and time-to-market."/>
+          content="Data Security simplified."/>
     <meta property="og:type" content="website"/>
     <meta property="og:url" content="https://peacemakr.io/"/>
     <meta itemprop="name" content="Peacemakr">
     <meta itemprop="description"
-          content="The Secure Data Platform that solves all the challenges of data security with on-prem, private-cloud, and hybrid root of trusts that reduces costs and time-to-market.">
+          content="Data Security simplified.">
     <meta name="twitter:card" content="summary"/>
     <meta name="twitter:title" content="Peacemakr"/>
     <meta name="twitter:description"
-          content="The Secure Data Platform that solves all the challenges of data security with on-prem, private-cloud, and hybrid root of trusts that reduces costs and time-to-market."/>
+          content="Data Security simplified."/>
     <script src="navbar.js" type="text/javascript"></script>
     <script src="animatedtext.js" type="text/javascript"></script>
 
