--- a/src/about_us.html
+++ b/src/about_us.html
@@ -14,16 +14,16 @@
     <link href="/index.xml" rel="feed" type="application/rss+xml" title="Peacemakr" /> -->
     <meta property="og:title" content="Peacemakr"/>
     <meta property="og:description"
-          content="The Secure Data Platform that solves all the challenges of data security with on-prem, private-cloud, and hybrid root of trusts that reduces costs and time-to-market."/>
+          content="Data Security simplified."/>
     <meta property="og:type" content="website"/>
     <meta property="og:url" content="https://peacemakr.io/about_us.html"/>
     <meta itemprop="name" content="Peacemakr">
     <meta itemprop="description"
-          content="The Secure Data Platform that solves all the challenges of data security with on-prem, private-cloud, and hybrid root of trusts that reduces costs and time-to-market.">
+          content="Data Security simplified.">
     <meta name="twitter:card" content="summary"/>
     <meta name="twitter:title" content="Peacemakr"/>
     <meta name="twitter:description"
-          content="The Secure Data Platform that solves all the challenges of data security with on-prem, private-cloud, and hybrid root of trusts that reduces costs and time-to-market."/>
+          content="Data Security simplified."/>
     <script src="navbar.js" type="text/javascript"></script>
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
